# mobile_ffigen_cryptolib

./: .metadata  README.md  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/ffigen_cryptolib_example/: MainActivity.kt
example/lib/: main.dart
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: ffigen_cryptolib.dart  ffigen_cryptolib_bindings_generated.dart
src/: CMakeLists.txt  error.c  error.h  ffigen_cryptolib.c  ffigen_cryptolib.h
windows/: CMakeLists.txt
